Fix broken layout and remove TOC
- Revert to simpler CSS without complex flexbox/positioning
- Remove TOC configuration from posts (was causing issues)
- Keep basic width improvements with $max-width: 1400px
- Remove all custom layout modifications that broke the page
- Focus on typography and basic styling only

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,10 +5,7 @@
 @charset "utf-8";
 
 // Override theme variables BEFORE importing theme
-$max-width: 100% !default;  // Remove the 1280px constraint
-$right-sidebar-width-narrow: 200px !default;
-$right-sidebar-width: 250px !default;
-$right-sidebar-width-wide: 300px !default;
+$max-width: 1400px !default;  // Increase from default 1280px
 
 // Import Minimal Mistakes theme
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@@ -16,115 +13,11 @@ $right-sidebar-width-wide: 300px !default;
 
 // Custom styles for better readability and layout
 
-// Container width adjustments
+// Container width adjustments for better content width
 .page {
-  @include breakpoint($large) {
-    padding-left: 1em;
-    padding-right: 1em;
-  }
-
   @include breakpoint($x-large) {
-    max-width: 1600px;  // Generous max-width for very large screens
+    max-width: $max-width;
     margin: 0 auto;
-    padding-left: 2em;
-    padding-right: 2em;
-  }
-}
-
-// Inner wrap adjustments
-.page__inner-wrap {
-  float: left;
-  width: 100%;
-}
-
-// Make single layout use more space
-.layout--single {
-  .page__inner-wrap {
-    @include breakpoint($large) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-    @include breakpoint($x-large) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-  }
-
-  // When author profile is shown
-  &.author-profile {
-    .page__content {
-      @include breakpoint($large) {
-        float: right;
-        width: calc(100% - 200px);
-        padding-left: 1em;
-      }
-
-      @include breakpoint($x-large) {
-        width: calc(100% - 250px);
-        padding-left: 2em;
-      }
-    }
-  }
-
-  // For wide class - use full width
-  &.wide {
-    .page__content {
-      @include breakpoint($large) {
-        width: 100%;
-        float: none;
-        padding-left: 0;
-        padding-right: 0;
-      }
-    }
-
-    // Hide author profile on wide pages
-    .sidebar__left {
-      display: none;
-    }
-  }
-}
-
-// Default single layout (without wide class)
-.layout--single:not(.wide) {
-  .page__inner-wrap {
-    @include breakpoint($large) {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-  }
-  
-  .page__content {
-    @include breakpoint($large) {
-      flex: 1;
-      max-width: calc(100% - #{$right-sidebar-width-narrow} - 2em);
-      padding-right: 2em;
-    }
-
-    @include breakpoint($x-large) {
-      max-width: calc(100% - #{$right-sidebar-width} - 3em);
-      padding-right: 3em;
-    }
-  }
-  
-  // Ensure the TOC appears on the right
-  .sidebar__right {
-    @include breakpoint($large) {
-      flex: 0 0 $right-sidebar-width-narrow;
-      margin-left: 0;
-      
-      &.sticky {
-        position: sticky;
-        top: 2em;
-        max-height: calc(100vh - 4em);
-        overflow-y: auto;
-      }
-    }
-
-    @include breakpoint($x-large) {
-      flex: 0 0 $right-sidebar-width;
-    }
   }
 }
 
@@ -194,46 +87,6 @@ html.dark {
   .page__content {
     font-size: 0.95em;
   }
-}
-
-// TOC content styling
-.toc {
-  font-size: 0.875rem;
-  background: rgba(0, 0, 0, 0.02);
-  border-radius: 4px;
-  padding: 1em;
-  
-  @include breakpoint($large) {
-    margin-top: 0;
-  }
-  
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  li {
-    padding: 0.125em 0;
-  }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-    
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-  
-  .active {
-    font-weight: bold;
-  }
-}
-
-// Dark mode TOC background
-html.dark .toc {
-  background: rgba(255, 255, 255, 0.02);
 }
 
 // Improve page layout for about page
